log
Thu 10 Nov 2022 12:30:53 AM UTC: 
 tests:  0|5
total_score: 0/70
0ab0802
Thu 10 Nov 2022 12:32:52 AM UTC: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:56:21: error: unused variable ‘comp’ [-Werror=unused-variable]
   56 |   int l = 0, m = 0, comp = 0;
      |                     ^~~~
sudoku.c:56:14: error: unused variable ‘m’ [-Werror=unused-variable]
   56 |   int l = 0, m = 0, comp = 0;
      |              ^
sudoku.c:56:7: error: unused variable ‘l’ [-Werror=unused-variable]
   56 |   int l = 0, m = 0, comp = 0;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
ca010d6
Thu 10 Nov 2022 12:33:22 AM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:17: error: ‘j’ undeclared (first use in this function)
   59 |   for(int k=0 ; j<9 ; j++)
      |                 ^
sudoku.c:59:17: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:59:11: error: unused variable ‘k’ [-Werror=unused-variable]
   59 |   for(int k=0 ; j<9 ; j++)
      |           ^
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
In file included from test.c:5:
sudoku.c:56:21: error: unused variable ‘comp’ [-Werror=unused-variable]
   56 |   int l = 0, m = 0, comp = 0;
      |                     ^~~~
sudoku.c:56:14: error: unused variable ‘m’ [-Werror=unused-variable]
   56 |   int l = 0, m = 0, comp = 0;
      |              ^
sudoku.c:56:7: error: unused variable ‘l’ [-Werror=unused-variable]
   56 |   int l = 0, m = 0, comp = 0;
      |       ^
test.c:262: error: control reaches end of non-void function [-Werror=return-type]
  262 | }
      | 
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6c41f83
Thu 10 Nov 2022 12:33:27 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:17: error: ‘j’ undeclared (first use in this function)
   59 |   for(int k=0 ; j<9 ; j++):
      |                 ^
sudoku.c:59:17: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:59:27: error: expected expression before ‘:’ token
   59 |   for(int k=0 ; j<9 ; j++):
      |                           ^
sudoku.c:59:11: error: unused variable ‘k’ [-Werror=unused-variable]
   59 |   for(int k=0 ; j<9 ; j++):
      |           ^
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
In file included from test.c:5:
sudoku.c:56:21: error: unused variable ‘comp’ [-Werror=unused-variable]
   56 |   int l = 0, m = 0, comp = 0;
      |                     ^~~~
sudoku.c:56:14: error: unused variable ‘m’ [-Werror=unused-variable]
   56 |   int l = 0, m = 0, comp = 0;
      |              ^
sudoku.c:56:7: error: unused variable ‘l’ [-Werror=unused-variable]
   56 |   int l = 0, m = 0, comp = 0;
      |       ^
sudoku.c:54:9: error: unused variable ‘list’ [-Werror=unused-variable]
   54 |   List* list=createList();
      |         ^~~~
test.c:262: error: control reaches end of non-void function [-Werror=return-type]
  262 | }
      | 
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2e10f5d
